--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,10 @@ hr {
 	border-width: 1px;
 }
 
+.white-text{
+	color: white;
+}
+
 .scrollable-column{
     height: 100vh;
 	overflow-y: scroll;
@@ -32,4 +36,14 @@ hr {
 
 .textbox-width{
 	width: 25vw;
+}
+
+#particles-js {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background-color: #181b31;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 50% 50%;
 }
