* Removed redundant CSS file. * Removed redundant form tag * Removed redundant runat attribute

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,15 @@
-﻿body, html{
+﻿/*
+ 	@TODO
+  	Add some padding to the buttons for the tasks.
+ */
+
+body, html{
     height: 100vh;
     overflow:hidden;
+}
+
+.h1-big{
+	font-size: 60px;
 }
 
 .center-horizontally{
